--- a/style.css
+++ b/style.css
@@ -7,3 +7,19 @@
     align-items: center;
     justify-content: space-around;
 }
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 10%;
+  }
+  input,
+  select {
+    width: 200px;
+    padding: 3px 5px;
+    margin-bottom: 10px;
+    border: 1px solid black;
+    border-radius: 3px;
+  }
+  
